css/onhb11_tarefona.scss
/* ... */
@mixin var-color($i, $alpha: 1) {
  @at-root .sol-de-sabado & {
    color: transparentize(nth(nth($palettes, 1), $i), 1-$alpha);
  }
  @at-root .sol-de-segunda & {
    color: transparentize(nth(nth($palettes, 2), $i), 1-$alpha);
  }
  @at-root .paisagem-celta & {
    color: transparentize(nth(nth($palettes, 3), $i), 1-$alpha);
  }
  @at-root .a-solidao-das-pedras & {
    color: transparentize(nth(nth($palettes, 4), $i), 1-$alpha);
  }
}

@mixin var-bgcolor($i, $alpha: 1) {
  @at-root .sol-de-sabado & {
    background-color: transparentize(nth(nth($palettes, 1), $i), 1-$alpha);
  }
  @at-root .sol-de-segunda & {
    background-color: transparentize(nth(nth($palettes, 2), $i), 1-$alpha);
  }
  @at-root .paisagem-celta & {
    background-color: transparentize(nth(nth($palettes, 3), $i), 1-$alpha);
  }
  @at-root .a-solidao-das-pedras & {
    background-color: transparentize(nth(nth($palettes, 4), $i), 1-$alpha);
  }
}

@mixin img-ratio($height-to-width) {
  position: relative;
  .img-container {
    width: 100%;
    height: 0;
    padding: $height-to-width 0 0 0;
    overflow: hidden;
    position: relative;
    img {
      width: 100%;
      height: 100%;
      object-fit: cover;
      position: absolute;
      left: 0;
      right: 0;
      top: 0;
      bottom: 0;
    }
  }
  img {
    @extend .sepiaish-img;
  }
}

img {
  max-width: 100%;
}

.text-shadow {
  text-shadow: 0px 2px 3px rgba(0, 0, 0, 0.3);
}

.spreads {
  display: grid;
  @media only screen and (min-width: $mobile) {
    width: calc(100% - #{2 * $m});
    margin: $m * 3 auto;
    grid-template-columns: 1fr 1fr;
    max-width: 960px;
    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
  }
  @media only screen and (max-width: $mobile) {
    width: calc(100% - #{$m * $mob_offset * 2});
    grid-template-columns: 1fr;
    &#spread1 {
      margin: $m * 2 auto 0 auto;
    }
    &#spread2 {
      margin: 0 auto $m * 2 auto;
    }
    .pages {
      margin-bottom: $m/2;
      box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25),
        0 10px 10px rgba(0, 0, 0, 0.22);
    }
  }
}

.sepiaish-img {
  filter: grayscale(90%) sepia(30%);
}

.pages {
  background: $paper;
  position: relative;
  min-height: calc(480px * 1.4 - #{$m});
  &:after {
    width: $m * 2;
    position: absolute;
    content: "";
    top: 0;
    bottom: 0;
    mix-blend-mode: multiply;
    z-index: 10;
  }

  $shade: mix(rgba(0, 0, 0, 0.5), $paper);

  &:nth-child(odd):after {
    right: 0;
    background-image: linear-gradient(to right, transparent, $shade);
  }
  &:nth-child(even):after {
    left: 0;
    background-image: linear-gradient(to right, $shade, transparent);
  }
  @media only screen and (min-width: $mobile) {
    &:nth-child(odd):after {
      border-right: 1px solid mix(black, $shade);
    }
    &:nth-child(even):after {
      border-left: 1px solid mix(white, $shade);
    }
  }
}

.generic-full-page-img {
  @extend .sepiaish-img;
  position: absolute;
  left: 0;
  top: 0;
  right: 0;
  width: 100%;
  height: 100%;

  object-fit: cover;
  z-index: 1;
}
/* ... */

